[fix] Fix height issue on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 }
 .sessions-container {
   height: calc(100vh - 60px);
+  height: calc(100dvh - 60px);
   overflow-y: scroll;
 }
 .header-btn {
